--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -34,14 +34,15 @@ p{
     background-color: #cccccc;
     border-radius: 5px;
     border-color: #cccccc;
-    width: 25%;
+    width: 30%;
     
 }
-.foto a {
+.foto button a {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
     text-decoration: none;
     color: white;
+    font-size: 100%;
 }
 /* nav{
     display: inline;
